2007-03-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* TestMatrix.cs: Allow a small delta when comparing floats. This 
	allows the ARM to work properly (e.g. -9.999995 versus -10).

2006-09-26  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Added test case for Reverse (and found out that
	the types aren't reversed, only the points are).

2006-09-18	Boris Kirzner <borisk@mainsoft.com>

	* TestColorBlend.cs,TestHatchBrush.cs : marked tests not working
	for TARGET_JVM.

2006-08-16  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Ignore some test cases if we cannot get any 
	font family from GDI+.
	* TestHatchBrush.cs: Ignore some test cases if we cannot get any font
	family from GDI+. Update to NUnit 2.2+ and fix getOutSufix method

2006-06-09  Sebastien Pouliot  <sebastien@ximian.com> 

	* GraphicsPathTest.cs: Added test cases for IsVisible methods.

2006-06-07  Sebastien Pouliot  <sebastien@ximian.com> 

	* GraphicsPathTest.cs: Added test cases for IsOutlineVisible methods.

2006-06-01  Sebastien Pouliot  <sebastien@ximian.com>

	* TestHatchBrush.cs: Some were surprisingly similar until...

2006-05-24  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Ignore some test cases that aren't implemented 
	in libgdiplus and have different results in MS 1.x/2.0 (or between
	different executions, yuck).

2006-05-09  Sebastien Pouliot  <sebastien@ximian.com>

	* PathGradientBrushTest.cs: New. Unit tests (mostly) based on the test
	cases created for LinearGradientBrush.

2006-05-08  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Added test cases for Widen and Wrap with empty
	path (expected behaviour) and paths that have a single point (stranger
	behaviour). Changed comments on GetBounds_WithPen test case as it will
	probably never work under Mono due to difference in precisions.

2006-05-05  Sebastien Pouliot  <sebastien@ximian.com> 
